--- a/style.css
+++ b/style.css
@@ -1,25 +1,270 @@
-* {
-    margin: 10px 100px;
-    font-size: 18px;
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+h1{
+    font-size: 100px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-h1 {
-    margin-top: 100px;
     text-align: center;
+}
+
+h3{
     font-size: 40px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
 }
 
-.input_style {
-    border: none;
-    padding: 5px;
-    width: 750px;
-    text-align: left;
-    border-bottom: 1px solid;
+p{
+    font-size: 20px;
+    line-height: 30px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
 }
 
-.submit_button {
-    border: 1px solid;
-    border-radius: 50px;
-    padding: 10px 80px;
+button{
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 45px;
+    border: 3px solid white;
+    width: 200px;
+    cursor: pointer;
+    color: white
+}
+
+button:hover {
+    background-color: white;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 45px;
+    border: 3px solid white;
+    width: 200px;
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+}
+
+.menu{
+    width: 100%;
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container{
+    height: 100%;
+    width: 100%; 
+    border-bottom: 1px solid #000;
+}
+
+.float{
+    height: 50%;
+    width: 100%; 
+}
+
+.nav ul li{
+    display: inline;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    margin-left: 40px;
+    cursor: pointer;
+    font-size: 18px;
+    line-height: 80px;
+}
+
+a{
+    text-decoration: none;
+
+}
+
+.bgimage{
+    background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)), url(bg001.jpg);
+    background-size: cover;
+    height: 100vh;
+    background-position: center; 
+}
+
+.about-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 12px;
+    margin: 50px;
+}
+
+.about img{
+    margin-right: 150px;
+    margin-left: 100px;
+    width: auto;
+    height: 500px;
+}
+
+.about p{
+    margin: 0 50 0;
+    text-align: right;
+    color: #000;
+}
+
+.logo{
+    float: left;
+    width: 30%;
+    cursor: pointer;
+    padding: 5 0 0 100;
+}
+
+.logo img{
+    margin-top: 25px;
+    width: 125px;
+    height: auto;
+}
+
+.nav{
+    float: right;
+    width: 50%;
+}
+
+.intro h1, h3, p{
+    color: white;
+}
+
+.intro{
+    margin-top: 160px;
+    text-align: center;
+}
+
+.intro p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
+}
+
+.introbtn{
+    margin-top: 50px;
+}
+
+
+.text h3{
+    color: #000;
+    margin: 125 0 0; 
+}
+
+.about p{
+    margin: 0 0 0 100;
+}
+
+.project-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 12px;
+    margin: 50px;
+}
+
+.project img{
+    width: auto;
+    height: 340px;
+}
+
+.project p{
+    color: #000;
+    text-align: center;
+    font-weight: bold;
+}
+
+.project_text p{
+    margin: 50 150 0;
+    text-align: center;
+    color: #000;
+}
+
+input{
+    margin: 25 0 0 180;
+    font-size: 15px;
+    width: 550px;
+    line-height: 30px;
+    padding: 8px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+textarea{
+    margin: 25 0 0 20;
+    font-size: 15px;
+    width: 550px;
+    line-height: 30px;
+    padding: 8px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.left{
+    float: left;
+    width: 50%;
+}
+
+.right{
+    width: 50%;
+    float: right;
+}
+
+.contact{
+    margin: 50 0 0 0;
+}
+
+.copyright p{
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-size: 18px;
+    margin: 100 0 20 0;
+}
+
+.copyright span {
+    font-weight: bold;
+    color: crimson;
+}
+
+.team-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;
+    margin: 50;
+}
+
+.team img{
+    height: 225px;
+    width: auto;
+}
+
+.team1{
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.team1 p{
+    color: #000;
+    text-align: center;
+    font-weight: bold;
+}
+
+.team1 img {
+    height: 500px;
+    width: auto;
+}
+
+.team p{
+    color: #000;
+    text-align: center;
+    font-weight: bold;
+}
+
+.send{
+    margin: 0px;
+    text-align: center;
+}
+
+.send button{
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 45px;
+    font-family: 'Montserrat', sans-serif;
+    border: 2px solid #000;;
+    width: 200px;
+    cursor: pointer;
+    color: #000;
 }
